# algo-puzzle-nqueens

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  demo_nqueens_puzzle.cpp
docs/: cheatsheet.txt
include/nqueens_puzzle/: nqueens_puzzle.h
src/: CMakeLists.txt  nqueens_puzzle.cpp
tests/: CMakeLists.txt  test_nqueens_puzzle.cpp
